# loco

./: .gitignore  CLAUDE.md  Cargo.toml  I18N_GUIDE.md  I18N_GUIDE_CN.md  README-zh-CN.md-summary.md  WORKFLOW.md  guide.md  sync-upstream.sh
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
assets/translations/: en.json  ja.json  zh.json
docs/: MCP_SERVER_IMPLEMENTATION.md  loco-rs-ai-prompt-zh.md  loco-rs-cheatsheet-zh.md  loco-rs-complete-guide-zh.md  loco-rs-developer-guide-zh.md  loco-rs-user-guide-zh.md  rust_compilation_best_practices.md
docs/ddd/: framework-assessment.md  implementation-guide.md  implementation-strategy.md  project-structure.md  thinking-process.md
examples/: ddd_usage.md  i18n_controller.rs  i18n_template.html  mcp_server_example.rs
examples/ddd_basics/: Cargo.toml
examples/ddd_basics/src/: main.rs
examples/ddd_test/: Cargo.toml
examples/ddd_test/src/: main.rs
examples/simple_ddd_example/: Cargo.toml  README.md  SESSION_SUMMARY.md  ddd_session_memory.md  mcp_memory_request.json
examples/simple_ddd_example/src/: lib.rs  main.rs
loco-ddd/: Cargo.toml  PROJECT_OVERVIEW.md  README.md
loco-ddd/.github/workflows/: ci.yml
loco-ddd/examples/minimal/: Cargo.toml
loco-ddd/examples/minimal/src/: main.rs
loco-ddd/scripts/: release.sh
loco-ddd/src/: error.rs  lib.rs  loco_integration.rs  prelude.rs
loco-ddd/src/ddd/: aggregate.rs  command.rs  entity.rs  event.rs  mod.rs  query.rs  repository.rs  service.rs  value_object.rs
loco-ddd/tests/: integration_test.rs
loco-mcp/: CHEATSHEET.md  INDEX.md  Makefile  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  VENV_MIGRATION.md  VENV_SETUP.md  constitutional_compliance_review.md  install.sh  performance_test.py  pyproject.toml  setup_venv.sh  validate_quickstart.py
loco-mcp/.github/workflows/: ci.yml
loco-mcp/docs/: API.md  BINDINGS_REFACTORING.md  CLAUDE_CODE_SETUP.md
loco-mcp/examples/: basic_workflow.md  project_creation_examples.md
loco-mcp/loco-bindings/: Cargo.toml  README.md  pyproject.toml  rustfmt.toml
loco-mcp/loco-bindings/loco_bindings/: __init__.py
loco-mcp/loco-bindings/src/: bindings.rs  error.rs  field.rs  file_ops.rs  generate.rs  lib.rs  loco_detect.rs  performance.rs  template.rs  template_cache.rs
loco-mcp/loco-bindings/tests/: test_comprehensive.rs  test_error_handling.rs  test_generate_controller_view.rs  test_generate_model.rs  test_generate_scaffold.rs  test_performance_controller.rs  test_performance_model.rs  test_performance_scaffold.rs  test_phase34_integration.rs  test_templates.py  test_validation.py  test_validation.rs
loco-mcp/loco-mcp-server/: README.md  example_usage.md  pyproject.toml  test_server.py
loco-mcp/loco-mcp-server/src/: __init__.py  config.py  security.py  server.py  tools.py  validation.py
loco-mcp/loco-mcp-server/tests/: test_comprehensive.py  test_scenarios.py  test_tools.py
loco-mcp/tests/: test_integration_real_projects.py  test_performance_validation.py  test_phase34_integration.py
loco-new/: README.md
session_memory/: README.md  ddd_context_preservation.yaml  ddd_implementation_checkpoints.yaml  ddd_integration_completion.yaml  ddd_technical_details.yaml
specs/001-1-1-1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-1-1-1/contracts/: binding-interface.yaml  mcp-tools.yaml
specs/002-loco-bindings-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-loco-bindings-mcp/contracts/: cli-utilities.inventory.yaml
src/: app.rs  boot.rs  cli.rs  config.rs  lib.rs
src/i18n/: detector.rs  manager.rs  middleware.rs  mod.rs  tera_integration.rs  translations.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs  transport.rs  types.rs
src/storage/: mod.rs
