[package]
name = "loco-ddd"
version = "0.1.0"
edition = "2021"
authors = ["Loco DDD Team"]
description = "Domain-Driven Design (DDD) support for Loco framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/loco-ddd"
keywords = ["ddd", "domain-driven-design", "loco", "rust", "web"]
categories = ["web-programming", "development-tools"]

[workspace]
# This package is independent from the parent workspace

[lib]
name = "loco_ddd"
path = "src/lib.rs"

[dependencies]
# Core dependencies
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Optional dependencies for framework integration
sea-orm = { version = "0.12", optional = true }
sea-orm-migration = { version = "0.12", optional = true }

# Event system
tokio-stream = "0.1"
futures = "0.3"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.0"

# Testing
mockall = "0.12"
tokio-test = "0.4"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
assert_matches = "1.5"

[features]
default = []
with-sea-orm = ["sea-orm", "sea-orm-migration"]
testing = []
full = ["with-sea-orm", "testing"]

# [[bench]]
# name = "ddd_benchmark"
# harness = false

[package.metadata.docs.rs]
features = ["full"]
targets = ["x86_64-unknown-linux-gnu"]