# Loco MCP Workspace Configuration
# This is a workspace root, not a Python package itself.
# Individual packages are in subdirectories with their own pyproject.toml files.

[project]
name = "loco-mcp-workspace"
version = "0.1.0"
description = "Loco MCP workspace - contains loco-bindings and loco-mcp-server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.16.0",
    "pytest-asyncio>=1.2.0",
]
# This is not an installable package, just a workspace marker

[tool.uv.workspace]
# Workspace members
members = [
    "loco-bindings",
    "loco-mcp-server"
]

# Shared development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

# Shared tool configurations
[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    "loco-bindings/target",
    "loco-mcp-server/build",
    ".venv",
]

[tool.black]
line-length = 88
target-version = ['py311']
extend-exclude = '''
/(
    \.venv
  | loco-bindings/target
  | loco-mcp-server/build
)/
'''

[tool.pytest.ini_options]
testpaths = ["loco-bindings/tests", "loco-mcp-server/tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# Individual packages can override these in their own pyproject.toml

