[package]
name = "simple_ddd_example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"