[workspace]
[package]
name = "loco-bindings"
version = "0.1.0"
edition = "2021"
description = "Python bindings for loco-rs generate functionality"
authors = ["Loco Framework Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/loco-rs/loco"

[lib]
name = "loco_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
once_cell = "1.19"
lru = "0.12"

[build-dependencies]
pyo3-build-config = "0.22"