[workspace]
[package]
name = "loco-bindings"
version = "0.1.0"
edition = "2021"
description = "Python bindings for loco-rs generate functionality"
authors = ["Loco Framework Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/loco-rs/loco"

[lib]
name = "loco_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
loco-gen = { path = "../../loco-gen", features = ["with-db"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

[build-dependencies]
pyo3-build-config = "0.22"